# collabExample

./: .Rbuildignore  .gitmodules  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  codecov.yml  configure.ac  zippyjh
R/: bacillust.R  collabExample.R  doSomething.R  eatSomething.R  mergeSort.R  people.R  sangjohan.R  say.R  sayGoodLuck.R  sayGoodnight.R  sayHello.R  zippyjh.R
man/: collabExample-package.Rd  eatSomething.Rd  mergeSort.Rd  people.Rd  sayHello.Rd  sayHelloRepeat.Rd
src/: Makevars.in  merge_sort.c
tests/: test_zippyjh  testthat.R
tests/testthat/: test-mergeSort.R  test-sangjohan.R  test-sayGoodLuck.R  test-sayHello.R  test-sayHelloRepeat.R
users/: YonghwanChoi  bacillust  pj518  sangjohan  skonmeme  zippyjh.txt
